# da_xxl_sim

./: README.md
analysis/cppcheck/: da58_can.txt  misra.json  suppressions.txt
doc/: Antibacklash.xlsx  Bootloader software for PEAK CAN adapter.docx  CHANGELOG.md  CommandSet.xlsx  DA30-D-Plus Firmware Update Manual.docx  DA30-HT Connector.docx  DA58-D Flashing Manual.docx  PID-controller.graphml  atsamc21.jflash  spec_da58d_eeprom_parameter_map.docx  spec_da58d_eeprom_parameter_map.md
fw/: .gitignore  CMakeLists.txt  DA58.ebp
fw/config/: FreeRTOSConfig.h  hpl_can_config.h
fw/drivers/: driver_ac.c  driver_ac.h  driver_adc.c  driver_adc.h  driver_can.c  driver_can.h  driver_capture.c  driver_capture.h  driver_clk.c  driver_clk.h  driver_dac.c  driver_dma.c  driver_dma.h  driver_dsu.c  driver_dsu.h  driver_flash.c  driver_flash.h  driver_gpio.c  driver_gpio.h  driver_i2c.c  driver_pwm.c  driver_snum.c  driver_snum.h  driver_spi.c  driver_temp.c  driver_temp.h  driver_timer.c  driver_uart.c  driver_uart.h  driver_wdt.c  driver_wdt.h
fw/hal/: can_structs.h
fw/hw/: analog.c  analog.h  canbus.h  chain.h  drv8320.c  hall.c  hdc1080.c  heartbeat.c  rs485.c  rs485.h
fw/include/component/: adc.h  dmac.h  nvmctrl.h  pac.h
fw/src/: can_volz.h  canbus.c  chain.c  cmd_set.h  comm.c  comm.h  conversion.c  conversion.h  counters.c  counters.h  crc16.c  crc16.h  crc32.c  crc32.h  defines.h  drivers.h  drv8320.h  eeprom.c  eeprom.h  global.c  global.h  hall.h  hdc1080.h  heartbeat.h  inetwork.c  inetwork.h  logic.c  logic.h  magnet.c  magnet.h  main.c  master.c  master.h  monitor.c  monitor.h  motor.c  motor.h  mvs.c  mvs.h  notch.c  (+19 more)
fw/sys/: samc21g18a_debug.ld  samc21g18a_release.ld  startup_samc21.c
named_pipe/: main.c  named_pipe.cbp  named_pipe.py
simulator/: new_servo_sim.cbp  new_servo_sim.depend  new_servo_sim.layout
simulator/hw_sim/: drivers.h  led.c
simulator/src/: CLI-commands.c  FreeRTOSConfig.h.old  UDPCommandServer.c  main.c
test/: CMakeLists.txt  da58_test.c  da58_test.cbp  wrappers.c  wrappers.h
test/cmocka/: cmocka.c
zeromq/: main.c  zeromq_client.py  zeromq_server.cbp
